@@ -1,4 +1,4 @@
-# Copyright (C) 2011-2013 Zentyal S.L.
+# Copyright (C) 2011-2014 Zentyal S.L.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License, version 2, as
@@ -26,10 +26,10 @@ use base 'EBox::Model::DataForm';
 #
 
 use EBox::Gettext;
+use EBox::Global;
 use EBox::Types::Boolean;
 use EBox::Types::Int;
-use EBox::Types::Union;
-use EBox::Types::Text;
+use EBox::Types::Select;
 
 sub new
 {
@@ -48,7 +48,7 @@ sub _bwModEnabled
 
 sub precondition
 {
-    return _bwModEnabled
+    return _bwModEnabled;
 }
 
 sub preconditionFailMsg
