@@ -1,3 +1,5 @@
+HEAD
+	+ Fix missing uses in EBox::CaptivePortal::Model::BWSettings
 3.2.1
 	+ Added missing EBox::Exceptions uses
 3.2
